tests/NormalTests/paczka1/fuzzy1/48178429.err
Error in line 13: A506 S576 85,3
Error in line 12: ryq7f18i2xU S576 70,6
Error in line 22: aqdNX A14 68,4
Error in line 33: QmgLtc A14 60,3
